@@ -13,6 +13,11 @@ OpenStopMotion Changelog
   - New function to rotate the image by 180 degrees
   - StatusBar with FPS and performance timer
   - added compatibility with Qt4 and Qt5
+  - New: Release-Button for rendering the images of a scene into a video file
+    by using a pipe. So you can use any tool, which is capable of reading raw
+    image data for video compression, like ffmpeg
+  - Bugfix: when only foreground chromakeying was enabled, but background
+    not, no chromakeying was applied in playback mode at all
 
 0.6.4 2013-04-18
   - added missing header include in arduino.cpp, fixed compiler error on
